fix: configure auth API and CORS